:construction: Fix Project main layout wrapping
Scrolling is still an issue

--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -12,25 +12,25 @@
 }
 
 .project-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
     gap: 1em;
 }
 
+.project-container > div {
+    flex-basis: 100%;
+}
+
 @media (min-width: 720px) {
-    .project-container {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+    .project-container > div {
+        flex-basis: calc(50% - .5em);
     }
 }
 
 .panel-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     gap: 1em;
-    /* TODO */
-    max-height: 80vh;
     overflow-y: auto;
 }
 
